--- a/drone.env
+++ b/drone.env
@@ -1,6 +1,8 @@
 # Drone secret key, used for private communication between agents and web UI
+DRONE_OPEN=true
+DRONE_HOST=http://localhost
 DRONE_USER_CREATE=turik207
-DRONE_USER_FILTER=turik207
+DRONE_USER_FILTER=t.ismayilov@hotmail.com
 DRONE_GITHUB_CLIENT_ID=8ae4212a495494da6c9f
 DRONE_GITHUB_CLIENT_SECRET=e38fad6af38002252c27a997bf68d4ef7ca9d68a
-DRONE_RPC_SECRET=okkfL3s3UMDwp9b7LpzMwmpudMocCSLR
+DRONE_RPC_SECRET=e54ab86f3afa5aa6eada998bf000b552
