--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,4 @@ steps:
     release: my-project
     kube_api_server: https://DD3DD9803497DB4F8B4D567D9E743B18.gr7.eu-central-1.eks.amazonaws.com
     kubernetes_token:
-      from_secret: default-token-94v6d-token
-    kube_certificate:
-      from_secret: default-token-94v6d-cert
+      from_secret: default-token-94v6d
