--- a/.drone.yml
+++ b/.drone.yml
@@ -12,3 +12,4 @@ steps:
       from_secret: default-token-94v6d
     kube_certificate:
       from_secret: default-token-94v6d-cert
+    kube_api_server: https://DD3DD9803497DB4F8B4D567D9E743B18.gr7.eu-central-1.eks.amazonaws.com
