--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
     chart: ./
     release: my-project
     kubernetes_token:
-      from_secret: default-token-94v6d
+      from_secret: drone-sa-token
     kube_certificate:
-      from_secret: default-token-94v6d-cert
+      from_secret: drone-sa-cert
     kube_api_server: https://DD3DD9803497DB4F8B4D567D9E743B18.gr7.eu-central-1.eks.amazonaws.com
