--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ steps:
 - name: deploy_production
   image: pelotech/drone-helm3
   settings:
-    helm_command: install
+    helm_command: upgrade
     chart: ./
     release: my-project
     kubernetes_token:
