--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,8 @@ steps:
 - name: Deploy app
   image: danielgormly/drone-plugin-kube:0.0.1
   settings:
-    template: /home/tismov/tasks/task06/app_helm/kube.yml # relative to repo root
+    template:
+      from_secret: kube
     ca:
       from_secret: cert
     server: https://192.168.59.104:8443
