--- a/.drone.yml
+++ b/.drone.yml
@@ -3,12 +3,12 @@ type: kubernetes
 name: default
 
 steps:
-- name: Deploy app
+- name: Deploy
   image: danielgormly/drone-plugin-kube:0.0.1
   settings:
-    template: kube.yml
+    template: /kube.yml
     ca:
       from_secret: cert
-    server: https://192.168.59.104:8443
+    server: https://B235FE188E9A46B15766BE898067F3FB.gr7.eu-central-1.eks.amazonaws.com
     token:
       from_secret: token
