--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,7 @@ steps:
 - name: Deploy
   image: danielgormly/drone-plugin-kube:0.0.1
   settings:
-    template: /kube.yml
+    template: kube.yml
     ca:
       from_secret: cert
     server: https://B235FE188E9A46B15766BE898067F3FB.gr7.eu-central-1.eks.amazonaws.com
