--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ name: default
 
 steps:
 - name: Deploy
-  image: danielgormly/drone-plugin-kube:0.0.1
+  image: vallard/drone-kube
   settings:
     template: kube.yml
     ca:
