--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,6 @@ steps:
     template: kube.yml
     ca:
       from_secret: cert
-    server: https://B235FE188E9A46B15766BE898067F3FB.gr7.eu-central-1.eks.amazonaws.com
+    server: https://192.168.59.105:8443
     token:
       from_secret: token
