--- a/.drone.yml
+++ b/.drone.yml
@@ -1,15 +1,17 @@
 kind: pipeline
-type: helm3
 name: default
+type: kubernetes
 
 steps:
-- name: deploy_production
-  image: pelotech/drone-helm3
+- name: deploy
+  image: quay.io/honestbee/drone-kubernetes
   settings:
-    helm_command: upgrade
-    chart: ./templates
-    release: my-project
-    api_server:
-      from_secret: url
+    kubernetes_server:
+      from_secret:  url
     kubernetes_token:
       from_secret: token
+    namespace: app
+    deployment: my-deployment
+    repo: myorg/myrepo
+    container: my-container
+    tag: mytag
