--- a/.drone.yml
+++ b/.drone.yml
@@ -2,10 +2,10 @@ kind: pipeline
 name: default
 
 steps:
-debug: true
 - name: deploy
   image: pelotech/drone-helm3
   settings:
+    force_upgrade: true
     helm_command: upgrade
     chart: template/
     release: my-project
